--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
 	"printWidth": 90,
 	"tabWidth": 2,
-	"useTabs": true,
 	"semi": true,
 	"singleQuote": true,
 	"jsxSingleQuote": true,
 	"arrowParens": "avoid",
-	"singleAttributePerLine": true
+	"singleAttributePerLine": true,
+	"endOfLine": "auto"
 }
